# Vapor-Shell

./: .gitignore  Cargo.toml  Vapor.toml  Workspace.vapor.toml
crates/vapor_shell/: Cargo.toml  README.md  Vapor.toml
crates/vapor_shell/docs/: architecture.md  cargo-metadata.md  commands.md  content.md  development.md  discovery.md  distribution.md  manifests.md  scripts.md  setup.md  steam-development.md  toolchain.md  windows-gnullvm-release-proof.md  windows-msvc-release-proof.md
crates/vapor_shell/docs/design/: README.md  manifest-schema.md  product-topology.md  setup-and-backend-superpass.md  workshop-content-superpass.md
crates/vapor_shell/scripts/: bootstrap-local-app-deploy.sh  register-vapor-path.sh
crates/vapor_shell/src/: app.rs  app_local_tools.rs  cargo_metadata.rs  command.rs  content.rs  content_packages.rs  cross_toolchain.rs  diagnostics.rs  discovery.rs  distribution.rs  documentation.rs  git_provider.rs  ide.rs  launch_session.rs  lib.rs  main.rs  manifest.rs  path_setup.rs  prompt.rs  setup.rs  setup_packages.rs  setup_self.rs  setup_self_packages.rs  source.rs  source_registry.rs  state.rs  steam.rs  terminal.rs  toolchain.rs  workflow.rs  workspace.rs
crates/vapor_shell/src/metadata/: mod.rs  validation.rs
crates/vapor_shell/templates/ide/: cargoProjects.xml  (+2 more)
crates/vapor_shell/tests/: cargo_metadata.rs  command.rs  content.rs  discovery.rs  distribution.rs  documentation.rs  ide.rs  installation_commands.rs  manifest.rs  metadata.rs  path_setup.rs  setup.rs  setup_self.rs  source.rs  state.rs  toolchain.rs  workflow.rs  workspace.rs
(+4 files in other folders)
