[workspace]
resolver = "3"
members = ["crates/vapor_shell"]

[workspace.package]
version = "0.5.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
clap-repl = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
toml = "1.1"
