[package]
name = "vapor_shell"
version.workspace = true
edition.workspace = true
readme = "README.md"

[[bin]]
name = "vapor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap-repl.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
toml.workspace = true
